# hermes-plugin-template

./: .gitignore  AGENTS.md  Makefile  README.md  __init__.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
plugin/: __init__.py  plugin.yaml  schemas.py  tools.py
scripts/: install.py
skill/: SKILL.md
tests/: __init__.py  test_plugin.py  test_skill.py
